--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -11,7 +11,7 @@
         0 4px 4px rgba(0,0,0,.03),
         0 8px 8px rgba(0,0,0,.03)
     );
-    @extend %user-select-none;
+    @include user-select(none);
     @include animation(slide-in-from-top .5s .2s, hidden .2s);
     
     @include ON_REDUCED_MOTION {
@@ -196,7 +196,7 @@
                 display: inline-block; z-index: 1;
                 width: 42px; height: 42px;
                 border: 3px solid currentColor;
-                @extend %border-radius-5px;
+                @include border-radius(5px);
             }
 
             &:after {
@@ -304,7 +304,7 @@
     i {
         position: absolute; left: 0; z-index: 1;
         width: 100%; height: 10%; // three 12% gaps between i's
-        @extend %border-radius-5px;
+        @include border-radius(5px);
         @include transition(all .2s, width .2s .2s, top .2s .2s, left .2s .2s);
     
         @include ON_REDUCED_MOTION {
@@ -395,7 +395,7 @@
         display: inline-block; position: relative;
         width: 52px; height: 100%;
         border: 1px solid #e8e8e8;
-        @extend %border-radius-5px;
+        @include border-radius(5px);
         @include transition(.2s);
 
         span {
@@ -421,7 +421,7 @@
                 width: 100%; height: 100%;
                 background-repeat: no-repeat;
                 @include background-size(100% 100%);
-                @extend %border-radius-5px;
+                @include border-radius(5px);
                 @include transform-origin(top left);
             }
             &.en:before {@extend %flag-usa;}
