--- a/css/source/generic.scss
+++ b/css/source/generic.scss
@@ -106,6 +106,10 @@ div {
     font-size: 0;
 }
 
+html.js-off .hide-without-js {
+    display: none !important;
+}
+
 
 
 /* FORMATTING ELEMENTS */
