--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -233,6 +233,14 @@
             }
         }
     }
+    
+    a,
+    button {
+        
+        &:focus {
+            outline: 2px dashed grey;
+        }
+    }
 
     .hover-bg {
         display: none; position: absolute; top: 15px; left: -100%; z-index: 1;
