--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -224,6 +224,7 @@ section {
                 &[logic='AND'] b:not(.and),
                 &[logic='OR'] b:not(.or) {
                     text-decoration: line-through; font-weight: normal;
+                    font-size: .8em;
                 }
             } 
         }
@@ -414,9 +415,9 @@ section {
         figcaption {
             position: absolute; top: -1%; left: -1%; z-index: 4;
             width: 102%; height: 102%;
-            background: rgba(0,0,0,.8);
+            background: rgba(28, 28, 28, 0.8);
             @include opacity(0);
-            @include transition(.3s .1s);
+            @include transition(.2s);
 
             @include ON_REDUCED_MOTION {
                 @include transition-property(none !important);
@@ -440,10 +441,51 @@ section {
             }
         }
         
-        &:hover figcaption {
-            @include opacity(1);
-            @include transform(scale(1));
-            @include transition(.3s);
+        @include ON_DESKTOP {
+            &:hover figcaption {
+                @include opacity(1);
+            }
+        }
+        
+        .project-show-info-btn {
+            position: absolute; bottom: 10px; right: 10px; z-index: 5;
+            width: 40px; height: 40px;
+            
+            @include ON_DESKTOP {
+                display: none;
+            }
+            
+            @include ON_MOBILE {
+                
+                &.show:after {
+                    content: 'X';
+                }
+                
+                &.show ~ figcaption {
+                    @include opacity(1);
+                }
+                
+            }
+            
+            &:after {
+                content: 'i';
+                display: block; position: absolute; top: 0; left: 0;
+                width: 100%; height: 100%;
+                background: rgba(0,0,0,.4); text-shadow: 1px 1px 2px rgba(0,0,0,.4);
+                text-align: center; font-size: 20px; font-weight: 700; color: white; line-height: 40px;
+                @include border-radius(50%);
+                @include transition(.2s);
+            }
+            
+            &:hover:after,
+            &:focus:after {
+                background: rgba(0,0,0,.55);
+            }
+            
+            &:active:after {
+                @include transform(scale(.8));
+                @include transition(.1s);
+            }
         }
     }
 }
