--- a/css/source/functions.scss
+++ b/css/source/functions.scss
@@ -67,6 +67,9 @@
 }
 
 @mixin ON_REDUCED_MOTION {
+    @media all {
+        @content;
+    }
     @media (prefers-reduced-motion: reduce) {
         @content;
     }
