--- a/css/source/generic.scss
+++ b/css/source/generic.scss
@@ -174,6 +174,10 @@ button.responsive {
     font-size: 40px; font-size: 3vw; line-height: 1em; text-decoration: none;
     @include border-radius(5px);
     @include transition(color .3s, background .3s);
+    
+    @include ON_REDUCED_MOTION {
+        @include transition(0s);
+    }
 
     @media (min-width: 1201px) {
         font-size: 36px;
@@ -211,7 +215,7 @@ a, button {
 .hidden-message {
     display: table-cell; position: fixed; right: 30px; bottom: 30px; z-index: 99;
     max-width: 95%; padding: 0 0 0 30px;;
-    @include animation(fade-out 2s 13s, hidden 999s 15s infinite);
+    @include animation(fade-out 1s 8s, hidden 999s 9s infinite);
     
     &:after {
         content: '';
