--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -68,6 +68,11 @@ section {
     position: relative;
     max-width: none; width: 100%;
     
+    .background {
+        position: absolute; top: 0; left: 0; z-index: 1;
+        width: 100%; height: 100%;
+    }
+    
     .text {
         position: relative; z-index: 2;
         max-width: $max-width; width: 100%; margin: 0 auto; padding: 0 20px;
@@ -161,6 +166,14 @@ section {
         
         &:active {
             @include background-size(36% 36%);
+        }
+        
+        @include ON_REDUCED_MOTION {
+            @include transition(0s);
+            
+            &:active {
+                @include background-size(40% 40%);
+            }
         }
     }
     
@@ -257,6 +270,10 @@ section {
             @include border-radius(30px);
             @include transition(transform .1s, background .2s);
             
+            @include ON_REDUCED_MOTION {
+                @include transition(0s);
+            }
+            
             &:after,
             &:before {
                 content: '';
@@ -280,6 +297,10 @@ section {
         
         &:active span {
             @include transform(scale(.9));
+            
+            @include ON_REDUCED_MOTION {
+                @include transform(scale(1));
+            }
         }
         
         &.inactive {
@@ -319,6 +340,10 @@ section {
 .project {
     display: inline-block; position: relative;
     @include transition(.2s);
+            
+    @include ON_REDUCED_MOTION {
+        @include transition(0s);
+    }
     
     // 3 cards beside each other
     width: 32%; margin: 1% 0.5%;
