--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -1,6 +1,7 @@
 /* GENERIC */
 
 main {
+    position: relative;
     text-align: center;
     
     // blur, if mobile navigation is opened
@@ -12,7 +13,53 @@ main {
     }
 }
 
+// animated background
+#animated-background {
+    position: absolute; top: 0; left: 0; z-index: 0;
+    width: 100%; height: 100%;
+    overflow: hidden;
+    
+    &:before {
+        content: '';
+        position: absolute; top: 90vh; left: 0; z-index: 1;
+        width: 100%; height: 100%;
+        @include linear-gradient(0deg, rgba(249, 249, 249, 0.8) 0%, rgba(249, 249, 249, 0.8) 90%, rgba(0,0,0,0) 100%);
+    }
+
+    .square {
+        display: block; position: absolute; top: 100%; z-index: 0;
+        @include opacity(.5);
+        @include border-radius(7%);
+        @include transform(rotate(0deg) translate(0,-100%));
+        @include transition(4s);
+
+        &.red {
+            background: #f29eb5;
+        }
+        &.blue {
+            background: #8ecee8;
+        }
+        &.rotating-left {
+            @include animation(square-float-up-left 100s linear forwards);
+        }
+        &.rotating-right {
+            @include animation(square-float-up-right 100s linear forwards);
+        }
+    }
+}
+
+@include keyframes(square-float-up-left) {
+    0% {@include transform(rotate(-200deg));}
+    100% {top: 0%;}
+}
+
+@include keyframes(square-float-up-right) {
+    0% {@include transform(rotate(200deg));}
+    100% {top: 0%;}
+}
+
 section {
+    position: relative; z-index: 2;
     max-width: $max-width; width: 100%; margin: 0 auto; padding: 0 20px;
     text-align: left;
     
@@ -65,13 +112,6 @@ section {
 /* INTRO / ABOUT SECTION */
 
 #about {
-    position: relative;
-    max-width: none; width: 100%;
-    
-    .background {
-        position: absolute; top: 0; left: 0; z-index: 1;
-        width: 100%; height: 100%;
-    }
     
     .text {
         position: relative; z-index: 2;
@@ -134,7 +174,6 @@ section {
 
 
 /* PROJECTS SECTION */
-
 
 #projects {
     
@@ -265,7 +304,7 @@ section {
         span {
             display: inline-block; position: relative;
             padding: 1em 2.2em 1em 1em;
-            background: #ddf0ff;
+            background: rgba(12, 142, 255, 0.12);
             color: $blue;
             @include border-radius(30px);
             @include transition(transform .1s, background .2s);
@@ -291,7 +330,7 @@ section {
         &:hover {
             
             span {
-                background: #c7e5ff;
+                background: rgba(12, 142, 255, 0.2);
             }
         }
         
@@ -307,7 +346,7 @@ section {
             
             span {
                 padding: 1em;
-                background: #f4f4f4;
+                background: rgba(226, 226, 226, 0.5);
                 color: $lightgray;
 
                 &:after,
@@ -320,7 +359,7 @@ section {
             &:hover {
 
                 span {
-                    background: #eaeaea;
+                    background: rgba(226, 226, 226, 0.8);
                 }
             }
         }
@@ -533,7 +572,7 @@ section {
     
         ul {
             display: block;
-            margin: 0; padding: 0.5% 0;
+            margin: 0; padding: 3% 0;
             font-size: 0;
             
             &:nth-child(2), 
@@ -550,7 +589,7 @@ section {
             
             > span {
                 display: block;
-                font-size: 16px; color: #6c6c6c;
+                font-size: 16px; color: #6c6c6c; font-weight: 700;
                 @extend %text-wrap;
             }
             
@@ -660,6 +699,7 @@ section {
 /* FOOTER */
 
 footer {
+    position: relative; z-index: 1;
     margin: 100px 0 0 0;
     background: $red;
     text-align: center;
