--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -568,17 +568,14 @@ section {
 #technologies {
     
     .container {
-        padding: 40px 0 0 0;
+        padding: 30px 0;
+        border: 3px solid #b7b7b7;
+        @include border-radius(9px);
     
         ul {
             display: block;
             margin: 0; padding: 3% 0;
             font-size: 0;
-            
-            &:nth-child(2), 
-            &:nth-child(4) {
-                background-color: rgba(0,0,0,.03);
-            }
         }
         
         li {
@@ -621,10 +618,8 @@ section {
             
         }
         
-        
-            
         @include ON_MOBILE {
-            padding: 20px 0 0 0;
+            padding: 20px 0;
 
             ul {
                 padding: 2.5% 0;
@@ -644,7 +639,7 @@ section {
         }
 
         @media (max-width: 450px) {
-            padding: 10px 0 0 0;
+            padding: 10px 0;
             
             li {
                 width: 50%;
