--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -569,7 +569,7 @@ section {
     
     .container {
         padding: 30px 0;
-        border: 3px solid #b7b7b7;
+        border: 2px solid #e1e1e1; background: rgba(255,255,255,.5);
         @include border-radius(9px);
     
         ul {
@@ -586,7 +586,7 @@ section {
             
             > span {
                 display: block;
-                font-size: 16px; color: #6c6c6c; font-weight: 700;
+                font-size: 16px; color: #6c6c6c;
                 @extend %text-wrap;
             }
             
