--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -151,6 +151,7 @@ section {
         }
         
         .name {
+            margin: 0;
             font-size: 2.2em; font-weight: 700;
             
             span {
