--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -599,6 +599,7 @@ section {
                 width: 60px; height: 60px; margin: 0 auto 5px auto;
                 background-repeat: no-repeat;
                 @include background-size(100% 100%);
+                @include filter(drop-shadow(1px 1px 2px rgba(0,0,0,.3)));
             }
             
             &.html:before      {@extend %icon-html;}
