added new project

--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -456,7 +456,7 @@ section {
         }
         
         .desc {
-            margin: 10px 0;
+            min-height: 48px; margin: 10px 0;
             overflow: hidden;
             font-size: 16px; color: #5a5a5a;
         }
