implemented backwards tabbing in focus chains

--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -455,6 +455,7 @@ section {
                 text-decoration: none; font-size: 16px; line-height: 20px; color: black;
                 @include opacity(.7);
                 @include border-radius(3px);
+                @include user-select(none);
                 @include transition(.2s);
 
                 &.github {
