--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -62,7 +62,7 @@ section {
     
     
     // fade in animations on page load
-    &#about {
+    &#intro {
         .greet {
             @include animation(fade-in-from-top 1s .5s, invisible .5s);
         }
@@ -89,7 +89,7 @@ section {
     }
         
     @include ON_REDUCED_MOTION {
-        &#about *,
+        &#intro *,
         &#projects, 
         &#contact {
             @include animation(none !important);
@@ -99,9 +99,9 @@ section {
 
 
 
-/* INTRO / ABOUT SECTION */
+/* INTRO SECTION */
 
-#about {
+#intro {
     
     .text {
         position: relative; z-index: 2;
@@ -160,6 +160,14 @@ section {
             }
         }
     }
+}
+
+
+
+/* ABOUT SECTION */
+
+#about {
+    
 }
 
 
@@ -667,8 +675,8 @@ footer {
     text-align: center;
     
     #to-top {
-        position: relative;
-        width: 100%; height: 120px; margin: 20px 0;
+        display: inline-block; position: relative;
+        width: 100px; height: 100px; margin: 20px 0;
         @include transition(.2s);
         
         html.js-off & {
@@ -677,9 +685,16 @@ footer {
 
         b {
             display: block; position: absolute; z-index: 2;
-            width: 40px; height: 40px;
+            width: 60px; height: 60px;
             @extend %translate-center;
             @include transition(.2s);
+        }
+        
+        @media (max-width: 600px) {
+            
+            b {
+                width: 40px; height: 40px;
+            }
         }
 
         i {
@@ -719,7 +734,8 @@ footer {
     
     p {
         margin: 6px 0; padding: 0 14px;
-        font-size: 14px; color: rgba(255,255,255,.92);
+        color: white;
+        @include opacity(.92);
         
         a {
             text-decoration: none; color: inherit; font-weight: 700;
